--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     color: #fff;
     transistion:all 0.25 ease;
 }
-.nav-links.submenu:hover a
+.nav-links:hover a
 {
     background:#f0f0f0;
 }
