--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ img{
         }
 
 
-div {
+.class {
     font: 22px Arial;
     display: inline-block;
     padding: 1em 2em;
@@ -200,7 +200,7 @@ div {
     transition: .5s ease-out;
     width: 500px;
 }
-div :hover {
+.class:hover {
     background-position: left;
 }
 
