--- a/style.css
+++ b/style.css
@@ -222,3 +222,28 @@ img{
 textarea {
   resize: none;
 }
+
+.social{
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+}
+
+.logo-border{
+    border: 1px solid black;
+    padding: 5px 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.size{
+    width: 20px;
+    height: 20px;
+}
+
+.a-style{
+    text-decoration: none;
+}
